# looplets-demo-impl

./: README.md  pyproject.toml
src/looplets_py/: de_looplets.py
tests/: test_pipeline.py
